fix: add java.util module open for Java 17 compatibility
Adds --add-opens=java.base/java.util=ALL-UNNAMED to test JVM options
to fix Kryo serialization errors with java.util.AbstractList.modCount.
This resolves failures in CoresetTestSuite and other RDD-based tests.

Related to #issue with Java 17 JPMS restrictions on reflection.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>