@@ -43,6 +43,7 @@
     Test / fork := true
     Test / javaOptions ++= Seq(
       "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+      "--add-opens=java.base/java.util=ALL-UNNAMED",
       "--add-opens=java.base/java.nio=ALL-UNNAMED",
       "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
       "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
